--- a/app/src/main/res/layout/scientific.xml
+++ b/app/src/main/res/layout/scientific.xml
@@ -1,6 +1,324 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.dusk.calculator.MainActivity"
+    android:theme="@style/ScientificTheme">
 
-</LinearLayout>
+    <Button
+        android:text="2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/one"
+        android:layout_toRightOf="@+id/one"
+        android:layout_toEndOf="@+id/one"
+        android:id="@+id/two" />
+
+    <Button
+        android:text="3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/two"
+        android:layout_toRightOf="@+id/two"
+        android:layout_toEndOf="@+id/two"
+        android:id="@+id/three" />
+
+    <Button
+        android:text="+"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/three"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/plus"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_toRightOf="@+id/three"
+        android:layout_toEndOf="@+id/three" />
+
+    <Button
+        android:text="e^x"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/pi"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/e"
+        android:layout_toRightOf="@+id/tan"
+        android:layout_toEndOf="@+id/tan"
+        style="@style/Widget.AppCompat.Button.Colored" />
+
+    <Button
+        android:text="AC"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/e"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/clear"
+        android:layout_toRightOf="@+id/tanh"
+        android:layout_toEndOf="@+id/tanh"
+        style="@style/Widget.AppCompat.Button" />
+
+    <Button
+        android:text="6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/three"
+        android:layout_toRightOf="@+id/two"
+        android:layout_toEndOf="@+id/two"
+        android:id="@+id/six" />
+
+    <Button
+        android:text="5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/six"
+        android:layout_toRightOf="@+id/one"
+        android:layout_toEndOf="@+id/one"
+        android:id="@+id/five" />
+
+    <Button
+        android:text="4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/one"
+        android:layout_toLeftOf="@+id/five"
+        android:layout_toStartOf="@+id/five"
+        android:id="@+id/four" />
+
+    <Button
+        android:text="7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pi"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/seven" />
+
+    <Button
+        android:text="8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/seven"
+        android:layout_toRightOf="@+id/four"
+        android:layout_toEndOf="@+id/four"
+        android:id="@+id/eight" />
+
+    <Button
+        android:text="9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/eight"
+        android:layout_toRightOf="@+id/five"
+        android:layout_toEndOf="@+id/five"
+        android:id="@+id/nine" />
+
+    <Button
+        android:text="Cos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/seven"
+        android:layout_toRightOf="@+id/sin"
+        android:layout_toEndOf="@+id/sin"
+        android:id="@+id/cos"
+        style="@style/Widget.AppCompat.Button.Colored" />
+
+    <Button
+        android:text="tan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/cos"
+        android:layout_toRightOf="@+id/eight"
+        android:layout_toEndOf="@+id/eight"
+        android:id="@+id/tan"
+        style="@style/Widget.AppCompat.Button.Colored" />
+
+    <Button
+        android:text="log"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/e"
+        android:layout_alignRight="@+id/cosh"
+        android:layout_alignEnd="@+id/cosh"
+        android:id="@+id/log"
+        style="@style/Widget.AppCompat.Button.Colored" />
+
+    <ToggleButton
+        android:text="ToggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/log"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/toggleButton"
+        android:textOff="rad"
+        android:textOn="deg"
+        android:checked="false" />
+
+    <Button
+        android:text="tanh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/tan"
+        android:layout_toRightOf="@+id/cos"
+        android:layout_toEndOf="@+id/cos"
+        android:id="@+id/tanh"
+        style="@style/Widget.AppCompat.Button.Colored" />
+
+    <Button
+        android:text="ln"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/tanh"
+        android:layout_toRightOf="@+id/log"
+        android:layout_toEndOf="@+id/log"
+        android:id="@+id/ln"
+        style="@style/Widget.AppCompat.Button.Colored" />
+
+    <Button
+        android:text="ANS"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/ans" />
+
+    <Button
+        android:text="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/ans"
+        android:layout_toEndOf="@+id/ans"
+        android:id="@+id/zero" />
+
+    <Button
+        android:text="="
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/zero"
+        android:layout_alignRight="@+id/three"
+        android:layout_alignEnd="@+id/three"
+        android:id="@+id/equal" />
+
+    <Button
+        android:text="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/one"
+        android:layout_above="@+id/ans"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/toggleButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textView3"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textView4"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/textView3"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+    <Button
+        android:text="-"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/minus"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_toRightOf="@+id/three"
+        android:layout_toEndOf="@+id/three" />
+
+    <Button
+        android:text="/"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/divide"
+        android:layout_above="@+id/plus"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_toRightOf="@+id/three"
+        android:layout_toEndOf="@+id/three" />
+
+    <Button
+        android:text="*"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/multiply"
+        android:layout_above="@+id/divide"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_toRightOf="@+id/six"
+        android:layout_toEndOf="@+id/six" />
+
+    <Button
+        android:text="sin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/sin"
+        android:layout_alignBaseline="@+id/cos"
+        android:layout_alignBottom="@+id/cos"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        style="@style/Widget.AppCompat.Button.Colored" />
+
+    <Button
+        android:text="sinh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/sinh"
+        android:layout_below="@+id/log"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        style="@style/Widget.AppCompat.Button.Colored" />
+
+    <Button
+        android:text="cosh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cosh"
+        android:layout_alignBaseline="@+id/tanh"
+        android:layout_alignBottom="@+id/tanh"
+        android:layout_toRightOf="@+id/toggleButton"
+        android:layout_toEndOf="@+id/toggleButton"
+        style="@style/Widget.AppCompat.Button.Colored" />
+
+    <Button
+        android:text="π"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/pi"
+        android:layout_above="@+id/multiply"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/nine"
+        android:layout_toEndOf="@+id/nine"
+        style="@style/Widget.AppCompat.Button.Colored" />
+</RelativeLayout>
