--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -8,4 +8,11 @@
         <item name="android:navigationBarColor">@color/colorAccent</item>
         <item name="android:colorForeground">@android:color/holo_blue_dark</item>
     </style>
+
+    <style name="ScientificTheme" parent="AppTheme">
+        <item name="colorPrimary">@android:color/holo_green_dark</item>
+        <item name="colorAccent">@android:color/holo_green_dark</item>
+        <item name="android:colorForeground">@android:color/holo_green_dark</item>
+        <item name="android:navigationBarColor">@android:color/holo_green_dark</item>
+    </style>
 </resources>
