--- a/app/src/main/res/layout/scientific.xml
+++ b/app/src/main/res/layout/scientific.xml
@@ -42,7 +42,7 @@
         android:layout_toEndOf="@+id/three" />
 
     <Button
-        android:text="e^x"
+        android:text="e"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/pi"
@@ -52,18 +52,6 @@
         android:layout_toRightOf="@+id/tan"
         android:layout_toEndOf="@+id/tan"
         style="@style/Widget.AppCompat.Button.Colored" />
-
-    <Button
-        android:text="AC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/e"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/clear"
-        android:layout_toRightOf="@+id/tanh"
-        android:layout_toEndOf="@+id/tanh"
-        style="@style/Widget.AppCompat.Button" />
 
     <Button
         android:text="6"
@@ -149,18 +137,6 @@
         android:id="@+id/log"
         style="@style/Widget.AppCompat.Button.Colored" />
 
-    <ToggleButton
-        android:text="ToggleButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/log"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/toggleButton"
-        android:textOff="rad"
-        android:textOn="deg"
-        android:checked="false" />
-
     <Button
         android:text="tanh"
         android:layout_width="wrap_content"
@@ -216,31 +192,6 @@
         android:layout_above="@+id/ans"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/toggleButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textView3"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textView4"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_above="@+id/textView3"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <Button
         android:text="-"
@@ -321,4 +272,94 @@
         android:layout_toRightOf="@+id/nine"
         android:layout_toEndOf="@+id/nine"
         style="@style/Widget.AppCompat.Button.Colored" />
+
+    <Button
+        android:text="("
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/log"
+        android:layout_toRightOf="@+id/toggleButton"
+        android:layout_toEndOf="@+id/toggleButton"
+        android:id="@+id/O.B." />
+
+    <Button
+        android:text=")"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/O.B."
+        android:layout_toStartOf="@+id/clear"
+        android:id="@+id/C.B."
+        android:layout_toLeftOf="@+id/clear" />
+
+    <Button
+        android:text="AC"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/C.B."
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/clear"
+        android:layout_toRightOf="@+id/ln"
+        android:layout_toEndOf="@+id/ln" />
+
+    <ToggleButton
+        android:text="ToggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/toggleButton"
+        android:textOff="rad"
+        android:textOn="deg"
+        android:checked="false"
+        android:layout_alignTop="@+id/O.B."
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="x!"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/sinh"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/factorial"
+        style="@style/Widget.AppCompat.Button.Colored" />
+
+    <Button
+        android:text="xⁿ"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/power"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_alignBaseline="@+id/ln"
+        android:layout_alignBottom="@+id/ln"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/tanh"
+        android:layout_toEndOf="@+id/tanh" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/toggleButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textView5"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textView6"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/textView5"
+        android:layout_alignParentTop="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
 </RelativeLayout>
