--- a/app/src/main/res/layout/standard.xml
+++ b/app/src/main/res/layout/standard.xml
@@ -230,7 +230,7 @@
         android:text="AC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/clear"
+        android:id="@+id/power"
         android:fontFamily="casual"
         android:onClick="ACButtonOnClickListener"
         style="@style/Widget.AppCompat.Button.Colored"
@@ -282,8 +282,8 @@
         android:fontFamily="casual"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_above="@+id/delete"
-        android:layout_alignLeft="@+id/clear"
-        android:layout_alignStart="@+id/clear" />
+        android:layout_alignLeft="@+id/power"
+        android:layout_alignStart="@+id/power" />
 
     <Button
         android:text="DEL"
@@ -294,8 +294,8 @@
         android:onClick="DELOnClickListener"
         style="@style/Widget.AppCompat.Button.Colored"
 
-        android:layout_alignBaseline="@+id/clear"
-        android:layout_alignBottom="@+id/clear"
+        android:layout_alignBaseline="@+id/power"
+        android:layout_alignBottom="@+id/power"
         android:layout_toRightOf="@+id/O.B."
         android:layout_toEndOf="@+id/O.B." />
 
