--- a/app/src/main/res/layout/scientific.xml
+++ b/app/src/main/res/layout/scientific.xml
@@ -329,20 +329,6 @@
         android:layout_toEndOf="@+id/tanh" />
 
     <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/DEGorRAD"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textView5"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:background="@drawable/border"/>
-
-    <TextView
-        android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -363,5 +349,17 @@
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/ans"
         android:layout_toEndOf="@+id/ans" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView5"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:background="@drawable/border"
+        android:layout_above="@+id/O.B."
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
